--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <div class="beak-top"></div>
           <div class="beak-bottom"></div>
         </div>
+        <div class="road"></div>
       </div>
     </div>
 </body>
